--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
     "url": "https://github.com/kjirou/node-glob-dry-run/issues"
   },
   "homepage": "https://github.com/kjirou/node-glob-dry-run#readme",
+  "bin": {
+    "node-glob-dry-run": "cli.js"
+  },
   "devDependencies": {
     "prettier": "^1.10.2"
   },
   "dependencies": {
-    "node-glob": "^1.2.0"
+    "globby": "^8.0.1",
+    "minimist": "^1.2.0"
   }
 }
